# rs-tenant

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  book.toml  readme.md
.github/workflows/: mdbook.yml
benches/: criterion_engine.rs
docs/: 01-overview.md  02-domain-model.md  03-authorization-flow.md  04-quickstart.md  05-integration-production.md  06-axum-integration.md  07-examples.md  08-testing-benchmark.md  09-faq-troubleshooting.md  10-rs-tenant-vs-casbin.md  11-platform-authorization.md  12-perf-baseline.md  README.md  SUMMARY.md  axum_ddd_integration.md  redesign-v0.3.md  redesign-v0.4.md  redesign-v0.5.md  redesign-v0.6.md  redesign-v0.7.md
examples/: axum.rs  cache.rs  jwt.rs  platform.rs  production_source.rs  quickstart.rs
scripts/: test-matrix.sh
src/: axum.rs  cache.rs  decision.rs  engine.rs  error.rs  grant.rs  id.rs  ids.rs  lib.rs  memory_cache.rs  memory_source.rs  memory_store.rs  permission.rs  request.rs  role.rs  role_hierarchy.rs  scope.rs  source.rs  store.rs  types.rs
src/platform/: engine.rs  ids.rs  memory_source.rs  mod.rs  request.rs  role.rs  scope.rs  source.rs  subject.rs
tests/: authorization_flow.rs  perf.rs
