[package]
name = "rs-tenant"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2.0.18"
async-trait = "0.1"
axum = { version = "0.7", optional = true }
http = { version = "1", optional = true }
jsonwebtoken = { version = "9", optional = true }
tower = { version = "0.5", optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
futures = "0.3"

[features]
default = []
serde = ["dep:serde"]
memory-store = []
casbin = []
memory-cache = []
axum = ["dep:axum", "dep:http", "dep:tower"]
axum-jwt = ["axum", "dep:jsonwebtoken", "serde"]
criterion-bench = ["dep:criterion"]

[[bench]]
name = "criterion_engine"
harness = false
required-features = ["criterion-bench", "memory-store", "memory-cache"]
