[package]
name = "rs-tenant"
version = "0.1.0"
edition = "2024"
description = "Multi-tenant RBAC authorization engine for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/huang-jia-jiang/rs-tenant"
homepage = "https://github.com/huang-jia-jiang/rs-tenant"
documentation = "https://docs.rs/rs-tenant"
readme = "README.md"
keywords = ["rbac", "multi-tenant", "authorization", "axum", "permissions"]
categories = ["authentication", "web-programming"]
exclude = [
    ".agents/**",
    ".github/**",
    "docs/**",
    ".gitbook.yaml",
    "book.toml",
    "AGENTS.md",
    "readme.md",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"
async-trait = "0.1.89"
axum = { version = "0.8.8", optional = true }
http = { version = "1.3.1", optional = true }
jsonwebtoken = { version = "10.3.0", optional = true }
tower = { version = "0.5.3", optional = true }
criterion = { version = "0.8.2", optional = true }

[dev-dependencies]
futures = "0.3.31"

[features]
default = []
serde = ["dep:serde"]
memory-store = []
casbin = []
memory-cache = []
axum = ["dep:axum", "dep:http", "dep:tower"]
axum-jwt = ["axum", "dep:jsonwebtoken", "serde"]
criterion-bench = ["dep:criterion"]

[[bench]]
name = "criterion_engine"
harness = false
required-features = ["criterion-bench", "memory-store", "memory-cache"]
